--- a/packages/calcite-components/src/components/tile/tile.scss
+++ b/packages/calcite-components/src/components/tile/tile.scss
@@ -8,7 +8,7 @@
  * @prop --calcite-tile-description-text-color: Specifies the description text color of the component.
  * @prop --calcite-tile-heading-text-color: Specifies the heading text color of the component.
  * @prop --calcite-tile-icon-color: Specifies the icon color in the component.
- * @prop --calcite-tile-selection-icon-color-hover: Specifies the color of the selection icon in the component on hover.
+ * @prop --calcite-tile-select-icon-color-hover: Specifies the color of the selection icon in the component on hover.
  */
 
 /** Internal variables
@@ -35,7 +35,7 @@
 
 .container {
   --calcite-internal-tile-outline-color: var(--calcite-tile-border-color, var(--calcite-internal-tile-border-color));
-  --calcite-internal-tile-select-icon-color: var(--calcite-tile-selection-icon-color, var(--calcite-color-text-3));
+  --calcite-internal-tile-select-icon-color: var(--calcite-color-text-3);
 
   background-color: var(--calcite-tile-background-color, var(--calcite-color-foreground-1));
   block-size: var(--calcite-container-size-content-fluid);
@@ -43,17 +43,16 @@
   inline-size: var(--calcite-container-size-content-fluid);
   outline: var(--calcite-border-width-sm, 1px) solid var(--calcite-internal-tile-outline-color);
   user-select: none;
-  box-shadow: var(--calcite-tile-shadow, var(--calcite-internal-tile-shadow, none)) &.interactive {
+  box-shadow: var(--calcite-tile-shadow, var(--calcite-internal-tile-shadow, none));
+
+  &.interactive {
     cursor: pointer;
 
     &:hover,
     &:focus,
     &.selected {
       --calcite-internal-tile-outline-color: var(--calcite-tile-border-color, var(--calcite-color-brand));
-      --calcite-internal-tile-select-icon-color: var(
-        --calcite-tile-selection-icon-color-hover,
-        var(--calcite-color-brand)
-      );
+      --calcite-internal-tile-select-icon-color: var(--calcite-color-brand);
       position: relative;
     }
     &.selected {
@@ -124,7 +123,7 @@ calcite-icon {
   );
 
   &.selection-icon {
-    --calcite-icon-color: var(--calcite-internal-tile-select-icon-color);
+    --calcite-icon-color: var(--calcite-tile-select-icon-color, var(--calcite-internal-tile-select-icon-color));
   }
 }
 
